Update z-index for footer to avoid overlapping

--- a/ui/src/app/features/footer/footer.component.scss
+++ b/ui/src/app/features/footer/footer.component.scss
@@ -21,6 +21,7 @@
   position: fixed;
   width: 100%;
   bottom: 0;
+  z-index: 5;
 }
 
 .mat-toolbar {
